# snowflake-credit-burn-variance-ledger

./: .gitignore  CHANGELOG.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml
docs/: architecture.md
fixtures/: credit_burn_variance.json
scripts/: check_sql.py  prerender.py  render_readme_assets.ps1  run_demo.py  smoke_check.py
snowflake_credit_burn_variance_ledger/: __init__.py  cli.py  ledger.py  site.py
sql/: credit_burn_variance_contract.sql
tests/: test_ledger.py
